--- a/Spencer_Forsberg.html
+++ b/Spencer_Forsberg.html
@@ -12,17 +12,25 @@
         </header>
         <section> 
         <h3> Hello , I'm Spencer Forsberg<h/3>
-        <p>I'm a student at yavapai coolege in Prescott Arizona . I'm also a full time machinest . I love leaning new things and growing </p>
+        <p>I'm a student at yavapai coolege in Prescott Arizona . I'm also a full time cnc machinest currently working in the aerospace industy . I love leaning new things and growing </p>
         <ul class="links">
             <li><a href="#"> Stop by </a></li>
             <li><a href="#">linkedin </a></li>
         </ul>
     </section> 
     <section>
-        <div class="im"
-
-    
-    </main>
-
-</body>
+        <div class="images">
+            <div class="photo of yours truly ">
+                <img alt="Photo of a man wearing a dress shirt and tie " src="assets/images/spencer.jpg">
+                </div>
+            <h3 class="small"> A few words about myself</h3>
+             <p> Thank you for checking me out .
+                I've been working in the machining industy for the past 8 years. In that time I have devoloped my machineing skills and incresed my understanding of the principles and practices that are required as a machinest. </p>
+             <p> I did many things before I started working as a cnc machinest. but it was while I was in gunsmithing school that I really learned that I wanted to learn more about machineing  </p>
+             </section>
+        </main>
+        <footer>
+            <span>2023 Yavapai College Web Development </span>
+        </footer>
+    </body>
 </html>
