--- a/Spencer_Forsberg.html
+++ b/Spencer_Forsberg.html
@@ -2,20 +2,22 @@
 <html lang="en">
         <head>
             <title> Spencer Forsberg  M02 project </title>
+            <meta charset="utf-8">
+            <meta name="viewpoint " content="width=device-width,inital-scale=1"
             
 </head>
 <body>
     <main>
         <header>
             <h1>Spencer Forsberg</h1>
-            <h2>Prescott, Arizona</h2>
+            <h2>Noneo, Arizona</h2>
         </header>
         <section> 
         <h3> Hello , I'm Spencer Forsberg<h/3>
         <p>I'm a student at yavapai coolege in Prescott Arizona . I'm also a full time cnc machinest currently working in the aerospace industy . I love leaning new things and growing </p>
         <ul class="links">
             <li><a href="#"> Stop by </a></li>
-            <li><a href="#">linkedin </a></li>
+            <li><a href="#"</a></li>
         </ul>
     </section> 
     <section>
