--- a/Spencer_Forsberg.html
+++ b/Spencer_Forsberg.html
@@ -3,7 +3,9 @@
         <head>
             <title> Spencer Forsberg  M02 project </title>
             <meta charset="utf-8">
-            <meta name="viewpoint " content="width=device-width,inital-scale=1"
+            <meta name="viewpoint " content="width=device-width,inital-scale=1">
+            <link rel="stylesheet" href="assets/css/style.css">
+            <
             
 </head>
 <body>
